# crewai-infranodus-templates

./: README.md
crewai_gap_analysis/: .gitignore
crewai_gap_analysis/src/gap_analysis_template/config/: agents.yaml  tasks.yaml
crewai_gap_questions/: .env.sample  README.md  pyproject.toml
crewai_gap_questions/src/gap_analysis_template/: crew.py
crewai_gap_questions/src/gap_analysis_template/tools/: infranodus_gap_finder_tool.py
crewai_gap_questions/src/gap_questions_template/: crew.py  main.py
crewai_gap_questions/src/gap_questions_template/config/: agents.yaml  tasks.yaml
crewai_gap_questions/src/gap_questions_template/tools/: infranodus_question_generator_tool.py
