[project]
name = "gap_analysis_template"
version = "0.1.0"
description = "gap-analysis-template using crewAI"
authors = [
    { name = "Dmitry Paranyushkoin", email = "contact@infranodus.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
gap_analysis_template = "gap_analysis_template.main:run"
run_crew = "gap_analysis_template.main:run"
train = "gap_analysis_template.main:train"
replay = "gap_analysis_template.main:replay"
test = "gap_analysis_template.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
