[project]
name = "gap_questions_template"
version = "0.1.0"
description = "gap-questions-template using crewAI"
authors = [
    { name = "Dmitry Paranyushkin", email = "contact@infranodus.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
gap_questions_template = "gap_questions_template.main:run"
run_crew = "gap_questions_template.main:run"
train = "gap_questions_template.main:train"
replay = "gap_questions_template.main:replay"
test = "gap_questions_template.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
